--- a/libs/esm/package.json
+++ b/libs/esm/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "author": "Aaron Gong",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
