--- a/libs/node/package.json
+++ b/libs/node/package.json
@@ -20,8 +20,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.688.0",
     "@google-cloud/storage": "^7.14.0",
     "@node-saml/node-saml": "^5.0.0",
+    "ali-oss": "^6.21.0",
     "bcryptjs": "^2.4.3",
     "connect-history-api-fallback": "^2.0.0",
     "cookie-parser": "^1.4.7",
