--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "git:hash": "git rev-parse --verify --short HEAD",
     "git:branch": "git rev-parse --abbrev-ref HEAD",
     "patch:node": "npm version patch --workspace=libs/node",
-    "patch:esm": "npm version patch --workspace=libs/node",
+    "patch:esm": "npm version patch --workspace=libs/esm",
     "pub:node": "npm publish --access public --workspace=libs/node",
     "pub:esm": "npm publish --access public --workspace=libs/esm",
     "lint": "eslint . --ext .js",
