--- a/libs/node/package.json
+++ b/libs/node/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "otplib": "^12.0.1",
+    "path-to-regexp": "8.2.0",
     "serve-index": "^1.9.1",
     "web-push": "^3.6.7",
     "ws": "^8.18.2",
